# nog

./: CMakeLists.txt  Makefile  bishop.toml  main.cpp  nog.toml
codegen/: codegen.cpp  codegen.hpp  emit_assert.cpp  emit_await.cpp  emit_binary.cpp  emit_channel.cpp  emit_error.cpp  emit_expression.cpp  emit_fail.cpp  emit_ffi.cpp  emit_field.cpp  emit_for.cpp  emit_function.cpp  emit_function_call.cpp  emit_go_spawn.cpp  emit_if.cpp  emit_list.cpp  emit_literals.cpp  emit_method_call.cpp  emit_or.cpp  emit_print.cpp  emit_refs.cpp  emit_select.cpp  emit_statement.cpp  emit_struct.cpp  emit_type.cpp  emit_variable.cpp  emit_while.cpp  emit_with.cpp
docs/reference/: syntax.md
docs/reference/stdlib/: builtins.md  channel.md  http.md  http_app.md  str.md
examples/: http_app.b  http_app.n  http_server.b  http_server.n  serve.n
include/: ast.hpp  codegen.hpp  lexer.hpp  module.hpp  parser.hpp  project.hpp  token.hpp  typechecker.hpp
lexer/: lexer.cpp  lexer.hpp  token.hpp
parser/: ast.hpp  parse_additive.cpp  parse_comparison.cpp  parse_error.cpp  parse_expression.cpp  parse_fail.cpp  parse_ffi.cpp  parse_for.cpp  parse_function.cpp  parse_if.cpp  parse_import.cpp  parse_or.cpp  parse_postfix.cpp  parse_primary.cpp  parse_return.cpp  parse_select.cpp  parse_statement.cpp  parse_struct.cpp  parse_type.cpp  parse_variable.cpp  parse_while.cpp  parser.cpp  parser.hpp
project/: project.cpp  project.hpp
runtime/: builtins.hpp  expressions.hpp  functions.hpp  io.hpp  literals.hpp  runtime.hpp  statements.hpp  structs.hpp  types.hpp
runtime/fiber_asio/: round_robin.hpp  yield.hpp
runtime/fiber_asio/detail/: yield.hpp
runtime/fs/: fs.hpp
runtime/http/: http.cpp  http.hpp
runtime/std/: channel.hpp  error.hpp  runtime.cpp  std.hpp
src/: codegen.cpp  lexer.cpp  main.cpp  module.cpp  parser.cpp  project.cpp  typechecker.cpp
src/codegen/: codegen.cpp
src/codegen/emit/: types.hpp
src/lexer/: lexer.cpp  token.hpp
src/parser/: ast.hpp  parser.cpp  parser.hpp
src/project/: module.cpp  module.hpp  project.cpp  project.hpp
src/runtime/fs/: fs.hpp
src/runtime/http/: http.cpp  http.hpp
src/runtime/std/: std.hpp
src/stdlib/: fs.cpp  fs.hpp  http.cpp  http.hpp
src/typechecker/: strings.cpp  typechecker.cpp  typechecker.hpp
stdlib/: http.cpp  http.hpp
tests/: test_assert.cpp  test_async.b  test_async.n  test_control_flow.b  test_control_flow.n  test_error_basic.b  test_error_handling.n  test_ffi.b  test_for_loops.n  test_fs.b  test_fs.n  test_function_refs.n  test_functions.b  test_hello_world.cpp  test_http.b  test_http.n  test_lists.b  test_methods.n  test_modules.b  test_negation.n  test_optionals.b  test_parentheses.n  test_pointers.b  test_pointers.n  test_precedence.b  test_read_debug.n  test_sleep.n  test_strings.b  test_strings.n  test_structs.b  test_structs.n  test_types.n  test_visibility.n  test_with.b
tests/errors/: Channel.recv_expects_0_arguments.b  Channel.send_expects.b  assignment_to_undefined.b  cannot_access_field_on_non-struct.b  cannot_assign.n  cannot_call_method_on_non-struct.b  cannot_store_pointer.n  cannot_take_address_of_primitive.n  defined_on_unknown_struct.b  duplicate_method.b  expects.b  fail_can_only_be_used_in_fallible_functions.n  field.b  for-each_requires_a_List.b  for_range_start_must_be_int.b  has_no_field.b  if_condition_must_be_bool.b  method.b  must_have.b  must_return_a_value.n  or_fail_err_can_only_be_used_in_fallible_functions.b  or_handler_requires_a_fallible_expression.n  return_type.b  select_case_requires_a_channel.b  sleep_expects_int.b  str_has_no_method.b  type_mismatch_in_binary.b  undefined_variable.b  unexpected_token.b  unknown_type.b  while_condition_must_be_bool.b
tests/errors/scoping/: undefined_variable.b
tests/errors/scoping_for/: undefined_variable.b
tests/testlib/: funcs.b
tools/: docgen.cpp
typechecker/: check_binary.cpp  check_channel.cpp  check_expression.cpp  check_field.cpp  check_for_stmt.cpp  check_function.cpp  check_function_call.cpp  check_if_stmt.cpp  check_list.cpp  check_literals.cpp  check_method_call.cpp  check_refs.cpp  check_return_stmt.cpp  check_select_stmt.cpp  check_statement.cpp  check_struct_literal.cpp  check_variable_stmt.cpp  check_while_stmt.cpp  lists.cpp  typechecker.cpp  typechecker.hpp
